# s2-geometry-library

./: CMakeLists.txt
cmake/: cmake_uninstall.cmake.in
examples/: CMakeLists.txt  s2example.cc
geometry/: CMakeLists.txt  r1interval_test.cc  s1angle_test.cc  s2_test.cc  s2cap_test.cc  s2cell_test.cc  s2cellid_test.cc  s2cellunion_test.cc  s2edgeindex_benchmark.cc  s2edgeindex_test.cc  s2edgeutil_benchmark.cc  s2edgeutil_test.cc  s2latlng_benchmark.cc  s2latlng_test.cc  s2latlngrect_test.cc  s2loop_benchmark.cc  s2loop_test.cc  s2main_test.cc  s2pointregion_test.cc  s2polygon_benchmark.cc  s2polygon_test.cc  s2polygonbuilder_test.cc  s2polyline_test.cc  s2r2rect_test.cc  s2regioncoverer_benchmark.cc  s2regioncoverer_test.cc  s2regionunion_test.cc
geometry/base/: CMakeLists.txt
geometry/strings/: CMakeLists.txt  split.cc  strutil.cc  strutil.h
geometry/util/: CMakeLists.txt
geometry/util/coding/: CMakeLists.txt
geometry/util/math/: CMakeLists.txt
geometry/util/math/exactfloat/: exactfloat.cc
